Fix theme toggle, talk card layout, and remove Twitter
- Wrap PageLayout in ThemeProvider so dark/light toggle and Mando audio actually work
- Fix audio path from relative to /sounds/Mando_Note.mp3
- Remove max-width constraint causing talk cards to overlap
- Remove Twitter icon link and clean up related $twitter-blue color/theme vars
- Remove unused imports (Footer, Header, FormattedDate) from index.astro

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -22,7 +22,6 @@ $themes: (
     hrefColor: $dark-blue,
     github: $black,
     linkedin: $linkedin-blue,
-    twitter: $twitter-blue,
     fcc: $fcc-green,
     hr: $hr-green,
     mail: $yellow,
@@ -46,7 +45,6 @@ $themes: (
     magicColor: $white,
     github: $black,
     linkedin: $linkedin-blue,
-    twitter: $twitter-blue,
     fcc: $fcc-green,
     hr: $hr-green,
     mail: $yellow,
@@ -176,9 +174,6 @@ $themes: (
     }
     &.linkedin {
       color: themed("linkedin");
-    }
-    &.twitter {
-      color: themed("twitter");
     }
     &.fcc {
       color: themed("fcc");
